--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "q-rpc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/core.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "repository": {
     "type": "git",
@@ -12,9 +12,15 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "LGPL-2.1",
   "bugs": {
     "url": "https://github.com/jsyzqt/q-rpc/issues"
   },
-  "homepage": "https://github.com/jsyzqt/q-rpc#readme"
+  "homepage": "https://github.com/jsyzqt/q-rpc#readme",
+  "dependencies": {
+    "axios": "^0.25.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.4"
+  }
 }
