--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jsyzqt/q-rpc",
-    "version": "1.0.0",
+    "version": "1.0.1-0",
     "description": "",
     "main": "dist/core.js",
     "scripts": {
@@ -24,9 +24,7 @@
         "np": "^7.6.0",
         "typescript": "^4.5.4"
     },
-    "np": {
-
-    },
+    "np": {},
     "publishConfig": {
         "access": "public"
     }
