--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "np": "^7.6.0",
         "typescript": "^4.5.4"
     },
-    "np": {},
+    "np": {
+        "2fa": false
+    },
     "publishConfig": {
         "access": "public"
     }
