--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     },
     "homepage": "https://github.com/jsyzqt/q-rpc#readme",
     "dependencies": {
-        "axios": "^0.25.0"
+        "axios": "^0.25.0",
+        "ts-node": "^10.9.2"
     },
     "devDependencies": {
         "np": "^7.6.0",
