--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
     },
     "homepage": "https://github.com/jsyzqt/q-rpc#readme",
     "dependencies": {
-        "axios": "^0.25.0"
+        "axios": "^1.7.8",
+        "body-parser": "^1.20.3",
+        "express": "^4.21.1",
+        "express-async-handler": "^1.2.0",
+        "multer": "^1.4.5-lts.1"
     },
     "devDependencies": {
+        "@types/body-parser": "^1.19.5",
+        "@types/express": "^5.0.0",
+        "@types/multer": "^1.4.12",
         "np": "^10.1.0",
-        "typescript": "^4.5.4",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.7.2"
     },
     "np": {
         "2fa": false
