--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
+        // "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
         "module": "commonjs",
         "target": "es2019",
 
@@ -15,5 +15,6 @@
         "declarationMap":true,
         "sourceMap": true
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": ["src/test/**/*"]
 }
