--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
         "axios": "^1.7.8",
         "body-parser": "^1.20.3",
         "express-async-handler": "^1.2.0",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "ws": "^8.18.0"
     },
     "devDependencies": {
-        "express": "^4.21.1",
         "@types/body-parser": "^1.19.5",
         "@types/express": "^5.0.0",
         "@types/multer": "^1.4.12",
+        "@types/ws": "^8.5.13",
+        "express": "^4.21.1",
         "np": "^10.1.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.2"
