--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "2fa": false
     },
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "registry": "https://registry.npmjs.org"
     }
 }
