--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jsyzqt/q-rpc",
-    "version": "1.0.2-1",
+    "version": "1.0.2",
     "description": "",
     "main": "dist/core.js",
     "scripts": {
